--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
     "lint": "eslint .",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "update": "ncu -u"
   },
   "repository": {
     "type": "git",
@@ -23,23 +24,23 @@
   "license": "MIT",
   "homepage": "https://github.com/ajgamble-milner/text-cleaner",
   "devDependencies": {
-    "chai": "^4.1.0",
-    "coveralls": "^2.13.1",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.3"
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.7",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "mocha": "^6.2.2",
+    "npm-check-updates": "^3.2.1",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "anglicize": "^1.0.0",
     "defaults": "^1.0.3",
-    "email-regex": "^1.0.0",
+    "email-regex": "^4.0.0",
     "ent": "^2.2.0",
-    "escape-string-regexp": "^1.0.5",
-    "phone-regex": "^2.0.0",
-    "stopword": "^0.1.6",
-    "striptags": "^3.0.1",
-    "url-regex": "^4.1.1"
+    "escape-string-regexp": "^2.0.0",
+    "phone-regex": "^2.1.0",
+    "stopword": "^0.3.4",
+    "striptags": "^3.1.1"
   }
 }
